# mcu-refactor

./: CMakeLists.txt  README.md  demo-module.c  demo-module.h  main.c  power-manager.c  power-manager.h
eeprom/: eeprom-module.c  eeprom-module.h  eeprom-operation.c  eeprom-operation.h
fault-led-event/: fault-detection.c  fault-detection.h  led-control.c  led-control.h  led-test.h  raw_impl.c
task/: fake-system-task.c  fake-system-task.h  task-base.c  task-base.h  task-manager.c  task-manager.h
